fix: change arrow space on mobile

--- a/src/templates/module_19_quoteimage/styles.less
+++ b/src/templates/module_19_quoteimage/styles.less
@@ -55,7 +55,7 @@
 	.icon {
 		position: absolute;
 		top: 50%;
-		left: -33px;
+		left: -23px;
 		width: 13px;
 		transform: translateY(-50%);
 		fill: @s2-darkgrey;
@@ -76,6 +76,10 @@
 				left: @s2-moduleGap-m-3;
 				height: @s2-moduleGap-m-1;
 			}
+		}
+
+		.icon {
+			left: -33px;
 		}
 	}
 
